--- a/src/views/partials/navigation.ejs
+++ b/src/views/partials/navigation.ejs
@@ -46,10 +46,10 @@
                 Carta
               </a>
               <ul class="dropdown-menu">
-                <li><a class="dropdown-item" href="#">Entradas</a></li>
-                <li><a class="dropdown-item" href="#">Platos Criollos</a></li>
+                <li><a class="dropdown-item" href="/entradas">Entradas</a></li>
+                <li><a class="dropdown-item" href="/platos">Platos Criollos</a></li>
                 <li>
-                  <a class="dropdown-item" href="#">Bebidas</a>
+                  <a class="dropdown-item" href="/bebidas">Bebidas</a>
                 </li>
               </ul>
             </li>
