--- a/src/public/entradas.css
+++ b/src/public/entradas.css
@@ -10,7 +10,7 @@ body {
 }
 
 .header {
-    background-image: url('./imagenes/header-image.png');
+    background-image: url('/img/header-image.png');
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
@@ -21,7 +21,6 @@ body {
     align-items: center;
     border-radius: 50px;
 }
-
 .header h1 {
     font-family: Poppins;
     font-size: 30px;
@@ -29,7 +28,6 @@ body {
     line-height: 28px;
     text-align: center;
 }
-
 .circle {
     width: 100px;
     height: 100px;
@@ -126,7 +124,7 @@ button:hover {
     display: flex;
     flex-direction: column;
     justify-content: left;
-    gap: 10px;
+    gap: 5px;
     align-items: flex-start;
     width: 50%;
 }
@@ -137,6 +135,7 @@ button:hover {
     font-weight: 700;
     line-height: 20px;
     color: #FFFFFF;
+    margin-top: 5px;
 }
 
 .description-dishes h2 {
@@ -181,7 +180,7 @@ button:hover {
     clip-path: polygon(50% 0%, 61% 35%, 98% 35%, 68% 57%, 79% 91%, 50% 70%, 21% 91%, 32% 57%, 2% 35%, 39% 35%);
 }
 
-img {
+.dish img {
     width: 100%;
     height: 400px;
     border-radius: 8px;
@@ -200,14 +199,14 @@ img {
     box-shadow: 0 -2px 10px rgba(0, 0, 0, 0.1);
 }
 
-.nav-item {
+.icono{
     color: black;
     font-size: 24px;
     text-decoration: none;
     position: relative;
 }
 
-.nav-item:hover {
+.icono:hover {
     color: #ED9544;
 }
 
@@ -228,12 +227,12 @@ img {
 
 /* Media Queries */
 @media (max-width: 768px) {
-    header {
+    .header {
         flex-direction: row;
         padding: 20px;
     }
 
-    header h1 {
+    .header h1 {
         font-size: 20px;
     }
 
@@ -291,7 +290,7 @@ img {
         padding: 10px;
     }
 
-    .nav-item {
+    .icono {
         font-size: 20px;
     }
 }
@@ -302,7 +301,7 @@ img {
         height: auto;
     }
 
-    header h1 {
+    .header h1 {
         font-size: 10px;
     }
 
@@ -363,7 +362,7 @@ img {
         padding: 10px 0;
     }
 
-    .nav-item {
+    .icono{
         font-size: 18px;
     }
 
