--- a/src/views/entradas.ejs
+++ b/src/views/entradas.ejs
@@ -8,16 +8,16 @@
     <link rel="stylesheet" href="./entradas.css">
     <title>Document</title>
 </head>
-<%- include('partials/navigation') %>
 <body>
+    <%- include('partials/navigation') %>
     <div class="header">
         <div class="circle">
-            <img class="arrow" src="./imagenes/arrow2.png" alt="Arrow">
+            <img class="arrow" src="/img/arrow2.png" alt="Arrow">
         </div>
 
         <h1>Nuestras Entradas</h1>
 
-        <img class="logo" src="./imagenes/logo.png" alt="">
+        <img class="logo" src="/img/logo.png" alt="">
 
     </div>
 
@@ -49,7 +49,7 @@
                     <div class="star-image"></div>
                 </div>
 
-                <img src="./imagenes/Causa-Limeña.jpg" alt="">
+                <img src="/img/Causa-Limeña.jpg" alt="">
 
                 <div class="description-dishes">
                     <p>S/5.00</p>
@@ -66,7 +66,7 @@
                     <div class="star-image"></div>
                 </div>
 
-                <img src="./imagenes/ensalada-rusa.jpg" alt="">
+                <img src="/img/ensalada-rusa.jpg" alt="">
 
 
                 <div class="description-dishes">
@@ -92,7 +92,7 @@
                     <div class="star-image"></div>
                 </div>
 
-                <img src="./imagenes/humitas.jpg" alt="">
+                <img src="/img/humitas.jpg" alt="">
 
                 <div class="description-dishes">
                     <p>S/4.00</p>
@@ -110,7 +110,7 @@
                     <div class="star-image"></div>
                 </div>
 
-                <img src="./imagenes/papa_huancaina.jpg" alt="">
+                <img src="/img/papa_huancaina.jpg" alt="">
 
                 <div class="description-dishes">
                     <p>S/6.00</p>
@@ -135,7 +135,7 @@
                     <div class="star-image"></div>
                 </div>
 
-                <img src="./imagenes/tamales.jpg" alt="">
+                <img src="/img/tamales.jpg" alt="">
 
                 <div class="description-dishes">
                     <p>S/5.00</p>
@@ -154,7 +154,7 @@
                     <div class="star-image"></div>
                 </div>
 
-                <img src="./imagenes/papa_ocopa.jpg" alt="">
+                <img src="/img/papa_ocopa.jpg" alt="">
 
                 <div class="description-dishes">
                     <p>S/6.00</p>
@@ -175,22 +175,22 @@
 
     <div class="footer">
 
-        <a href="#" class="nav-item">
+        <a href="#" class="icono">
             <i class="fas fa-home"></i>
         </a>
-        <a href="#" class="nav-item">
+        <a href="#" class="icono">
             <i class="fas fa-search"></i>
         </a>
-        <a href="#" class="nav-item">
+        <a href="#" class="icono">
             <i class="fas fa-shopping-cart"></i>
             <span class="badge">3</span>
         </a>
-        <a href="#" class="nav-item">
+        <a href="#" class="icono">
             <i class="fas fa-user"></i>
         </a>
 
     </div>
-
+  
 </body>
 
 </html>
