--- a/src/views/platos.ejs
+++ b/src/views/platos.ejs
@@ -8,16 +8,16 @@
     <link rel="stylesheet" href="./entradas.css">
     <title>Document</title>
 </head>
-<%- include('partials/navigation') %>
 <body>
+    <%- include('partials/navigation') %>
     <div class="header">
         <div class="circle">
-            <img class="arrow" src="./imagenes/arrow2.png" alt="Arrow">
+            <img class="arrow" src="/img/arrow2.png" alt="Arrow">
         </div>
 
         <h1>Nuestras Entradas</h1>
 
-        <img class="logo" src="./imagenes/logo.png" alt="">
+        <img class="logo" src="/img/logo.png" alt="">
 
     </div>
 
@@ -49,7 +49,7 @@
                     <div class="star-image"></div>
                 </div>
 
-                <img src="./imagenes/lomo-saltado.png" alt="">
+                <img src="/img/lomo-saltado.png" alt="">
 
                 <div class="description-dishes">
                     <p>S/20.00</p>
@@ -66,7 +66,7 @@
                     <div class="star-image"></div>
                 </div>
 
-                <img src="./imagenes/aji-gallina.png" alt="">
+                <img src="/img/aji-gallina.png" alt="">
 
 
                 <div class="description-dishes">
@@ -92,7 +92,7 @@
                     <div class="star-image"></div>
                 </div>
 
-                <img src="./imagenes/arroz-pollo.png" alt="">
+                <img src="/img/arroz-pollo.png" alt="">
 
                 <div class="description-dishes">
                     <p>S/15.00</p>
@@ -110,7 +110,7 @@
                     <div class="star-image"></div>
                 </div>
 
-                <img src="./imagenes/carapulcra.png" alt="">
+                <img src="/img/carapulcra.png" alt="">
 
                 <div class="description-dishes">
                     <p>S/20.00</p>
@@ -135,7 +135,7 @@
                     <div class="star-image"></div>
                 </div>
 
-                <img src="./imagenes/cau-cau.png" alt="">
+                <img src="/img/cau-cau.png" alt="">
 
                 <div class="description-dishes">
                     <p>S/15.00</p>
@@ -154,7 +154,7 @@
                     <div class="star-image"></div>
                 </div>
 
-                <img src="./imagenes/rocoto-relleno.png" alt="">
+                <img src="/img/rocoto-relleno.png" alt="">
 
                 <div class="description-dishes">
                     <p>S/25.00</p>
@@ -175,17 +175,17 @@
 
     <div class="footer">
 
-        <a href="#" class="nav-item">
+        <a href="#" class="icono">
             <i class="fas fa-home"></i>
         </a>
-        <a href="#" class="nav-item">
+        <a href="#" class="icono">
             <i class="fas fa-search"></i>
         </a>
-        <a href="#" class="nav-item">
+        <a href="#" class="icono">
             <i class="fas fa-shopping-cart"></i>
             <span class="badge">3</span>
         </a>
-        <a href="#" class="nav-item">
+        <a href="#" class="icono">
             <i class="fas fa-user"></i>
         </a>
 
