--- a/src/views/partials/navigation.ejs
+++ b/src/views/partials/navigation.ejs
@@ -1,67 +1,61 @@
-
-
+<link rel="stylesheet" href="/navigation.css">
+<%- include('head') %>
 <header>
-    <nav class="navbar navbar-expand-lg" style="background-color: #f3dacd">
-      <div class="container-fluid">
-        <a class="navbar-brand" href="/">
-          <img
-            src="img/logopng.png"
-            alt="logo"
-            class="me-2"
-            style="height: 60px"
-          />
-          El Peruanito</a
-        >
-        <button
-          class="navbar-toggler"
-          type="button"
-          data-bs-toggle="collapse"
-          data-bs-target="#navbarNavDropdown"
-          aria-controls="navbarNavDropdown"
-          aria-expanded="false"
-          aria-label="Toggle navigation"
-        >
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNavDropdown">
-          <ul class="navbar-nav ms-auto">
-            <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="#"
-                >Inicio</a
-              >
-            </li>
-            <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="/menu"
-                  >Menu</a
-                >
-              </li>
-            <li class="nav-item dropdown">
-              <a
-                class="nav-link dropdown-toggle"
-                href="#"
-                role="button"
-                data-bs-toggle="dropdown"
-                aria-expanded="false"
-              >
-                Carta
-              </a>
-              <ul class="dropdown-menu">
-                <li><a class="dropdown-item" href="#">Entradas</a></li>
-                <li><a class="dropdown-item" href="#">Platos Criollos</a></li>
-                <li>
-                  <a class="dropdown-item" href="#">Bebidas</a>
-                </li>
-              </ul>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Promociones</a>
-            </li>
-
-            <li class="nav-item">
-              <a class="nav-link" href="#">Cuenta</a>
-            </li>
-          </ul>
-        </div>
+  <nav class="navbar navbar-expand-lg custom-navbar">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="/">
+        <img
+          src="img/logopng.png"
+          alt="logo"
+          class="me-2 custom-logo"
+        />
+        El Peruanito
+      </a>
+      <button
+        class="navbar-toggler"
+        type="button"
+        data-bs-toggle="collapse"
+        data-bs-target="#navbarNavDropdown"
+        aria-controls="navbarNavDropdown"
+        aria-expanded="false"
+        aria-label="Toggle navigation"
+      >
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNavDropdown">
+        <ul class="navbar-nav ms-auto">
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="/">
+              <i class="bi bi-house-door-fill"></i>Inicio
+            </a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="/menu"> <i class="bi bi-menu-down"></i>Menu</a>
+          </li>
+          <li class="nav-item dropdown">
+            <a
+              class="nav-link dropdown-toggle"
+              href="#"
+              role="button"
+              data-bs-toggle="dropdown"
+              aria-expanded="false"
+            >
+            <i class="bi bi-arrow-down-square-fill"></i> Carta
+            </a>
+            <ul class="dropdown-menu">
+              <li><a class="dropdown-item" href="#">Entradas</a></li>
+              <li><a class="dropdown-item" href="#">Platos Criollos</a></li>
+              <li><a class="dropdown-item" href="#">Bebidas</a></li>
+            </ul>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#"> <i class="bi bi-bookmark-star-fill"></i> Promociones</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Cuenta</a>
+          </li>
+        </ul>
       </div>
-    </nav>
-  </header>
+    </div>
+  </nav>
+</header>
