--- a/src/views/entradas.ejs
+++ b/src/views/entradas.ejs
@@ -173,23 +173,24 @@
     </div>
 
 
-    <div class="footer">
+    <div class="footer2">
 
-        <a href="#" class="icono">
+        <a href="#" class="icono2">
             <i class="fas fa-home"></i>
         </a>
-        <a href="#" class="icono">
+        <a href="#" class="icono2">
             <i class="fas fa-search"></i>
         </a>
-        <a href="#" class="icono">
+        <a href="#" class="icono2">
             <i class="fas fa-shopping-cart"></i>
             <span class="badge">3</span>
         </a>
-        <a href="#" class="icono">
+        <a href="#" class="icono2">
             <i class="fas fa-user"></i>
         </a>
-
+  
     </div>
+    <%- include('partials/footer') %>
   
 </body>
 
