--- a/src/views/menu.ejs
+++ b/src/views/menu.ejs
@@ -22,39 +22,40 @@
             </form>
         </div>
 
-        <!-- Categorías -->
-        <div class="row mt-4">
-            <div class="col-md-4 mb-4">
-                <a href="enlace1.html" class="text-decoration-none">
-                    <div class="card">
-                        <img src="img/arrozConPollo.jpg" class="card-img-top" alt="Imagen 1">
-                        <div class="card-body text-center">
-                            <h5 class="card-title">Entradas</h5>
-                        </div>
-                    </div>
-                </a>
+       <!-- Categorías -->
+<!-- Categorías -->
+<div class="row mt-4">
+    <div class="col-md-4 mb-4">
+        <a href="enlace1.html" class="text-decoration-none">
+            <div class="card">
+                <img src="img/entradasmenu.jpg" class=" custom-img-height" alt="Imagen 1">
+                <div class="card-body text-center">
+                    <h5 class="card-title">Entradas</h5>
+                </div>
             </div>
-            <div class="col-md-4 mb-4">
-                <a href="enlace2.html" class="text-decoration-none">
-                    <div class="card">
-                        <img src="img/arrozConPollo.jpg" class="card-img-top" alt="Imagen 2">
-                        <div class="card-body text-center">
-                            <h5 class="card-title">Platos Criollos</h5>
-                        </div>
-                    </div>
-                </a>
+        </a>
+    </div>
+    <div class="col-md-4 mb-4">
+        <a href="enlace2.html" class="text-decoration-none">
+            <div class="card">
+                <img src="img/platomenu.jpg" class="custom-img-height" alt="Imagen 2">
+                <div class="card-body text-center">
+                    <h5 class="card-title">Platos Criollos</h5>
+                </div>
             </div>
-            <div class="col-md-4 mb-4">
-                <a href="enlace3.html" class="text-decoration-none">
-                    <div class="card">
-                        <img src="img/arrozConPollo.jpg" class="card-img-top" alt="Imagen 3">
-                        <div class="card-body text-center">
-                            <h5 class="card-title">Bebidas</h5>
-                        </div>
-                    </div>
-                </a>
+        </a>
+    </div>
+    <div class="col-md-4 mb-4">
+        <a href="enlace3.html" class="text-decoration-none">
+            <div class="card">
+                <img src="img/bebidasmenu.jpg" class=" custom-img-height" alt="Imagen 3">
+                <div class="card-body text-center">
+                    <h5 class="card-title">Bebidas</h5>
+                </div>
             </div>
-        </div>
+        </a>
+    </div>
+</div>
 
             <!-- Promociones -->
             <div class="titulo-h3">
@@ -63,7 +64,7 @@
             <div class="custom-promociones mb-2 text-center">
                 <h4>Martes de Sabor</h4>
                 <p>2X1 en Entradas Criollas en todas las órdenes mayores a S/ 70.00</p>
-                <img src="img/arrozConPollo.jpg" alt="Promoción" class="img-fluid w-50   d-block mx-auto"> ">
+                <img src="img/promocionesmenu.jpg" alt="Promoción" class="img-fluid w-50   d-block mx-auto"> ">
             </div>
 
          <!-- Populares -->
@@ -82,7 +83,7 @@
                 </div>
                 <div class="col-md-6 col-lg-4 mb-4">
                     <div class="card custom-card">
-                        <img src="img/arrozConPollo.jpg" class="card-img-top" alt="Carapulcra">
+                        <img src="img/carapulcramenu.jpg" class="card-img-top" alt="Carapulcra">
                         <div class="card-body">
                             <h5 class="card-title">Carapulcra</h5>
                             <p class="card-text">S/ 20.00</p>
@@ -94,7 +95,23 @@
         </div>
     </div>
 
+    <div class="footer2">
 
+        <a href="#" class="icono2">
+            <i class="fas fa-home"></i>
+        </a>
+        <a href="#" class="icono2">
+            <i class="fas fa-search"></i>
+        </a>
+        <a href="#" class="icono2">
+            <i class="fas fa-shopping-cart"></i>
+            <span class="badge">3</span>
+        </a>
+        <a href="#" class="icono2">
+            <i class="fas fa-user"></i>
+        </a>
+  
     </div>
+    <%- include('partials/footer') %>
 </body>
 </html>
