--- a/src/public/index.css
+++ b/src/public/index.css
@@ -1,120 +1,78 @@
-
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
+.custom-carousel-bg {
+  background-color: #f8bb89;
+  margin-top: 0px;
 }
 
-body {
-  font-family: Arial, sans-serif;
-  line-height: 1.6;
+/* Carousel inner styles */
+.custom-carousel-inner {
+  max-height: 620px;
+  overflow: hidden;
 }
 
-
-header h1 {
-  font-size: 3rem;
+/* Carousel images */
+.custom-carousel-img {
+  max-height: 600px;
+  object-fit: contain;
 }
 
-header p {
-  font-size: 1.2rem;
-  margin-top: 10px;
-}
-
-
-
-
-
-
-
-
-
-
-section {
-  padding: 40px 20px;
-  text-align: center;
-}
-
-.about {
-  background: #f4f4f4;
-}
-
-.about h2 {
-  font-size: 2rem;
-  margin-bottom: 20px;
-}
-
-.about p {
-  max-width: 600px;
-  margin: 0 auto;
-}
-
-.menu {
-  background: #f4a261;
-  color: white;
-}
-
-.menu h2 {
-  font-size: 2rem;
-  margin-bottom: 20px;
-}
-
-.menu .items {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
-  gap: 20px;
-}
-
-.menu .item {
-  background: white;
-  color: #333;
-  border-radius: 10px;
-  padding: 20px;
+/* Carousel captions */
+.custom-carousel-caption {
+  background-color: rgba(53, 53, 53, 0.7);
   width: 300px;
   text-align: center;
-  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+  
+  margin-left: 400px;
+  color: #fff6f1;
+  border-radius: 9%;
 }
 
-.menu .item h3 {
-  font-size: 1.5rem;
-  margin-bottom: 10px;
+/* Carousel control buttons */
+.custom-carousel-control {
+  background-color: black;
+  width: 40px;
+  height: 40px;
+  border-radius: 30%;
 }
 
-.menu .item p {
-  font-size: 1rem;
-  margin-bottom: 10px;
+/* Card images */
+.custom-card-img {
+  height: 250px;
+  object-fit: cover;
 }
 
-.menu .item span {
-  font-weight: bold;
+/* Fixed iframe styles */
+.custom-iframe {
+  position: fixed;
+  bottom: 20px;
+  right: 20px;
+  width: 300px;
+  height: 380px;
+  border: none;
+  z-index: 9999;
 }
 
-footer {
-  background: #333;
+.footer2 {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  background-color: #FFFFFF;
   color: white;
-  text-align: center;
-  padding: 20px;
+  padding: 15px 0;
+  bottom: 0;
+  width: 100%;
+  box-shadow: 0 -2px 10px rgba(0, 0, 0, 0.1);
 }
 
-@media (max-width: 768px) {
-  header h1 {
-    font-size: 2rem;
-  }
-
-  header p {
-    font-size: 1rem;
-  }
-
-  nav ul {
-    flex-direction: column;
-    align-items: center;
-  }
-
-  nav ul li {
-    margin: 10px 0;
-  }
-
-  .menu .item {
-    width: 90%;
-  }
+.icono2{
+  color: black;
+  font-size: 24px;
+  text-decoration: none;
+  position: relative;
 }
+
+.icono2:hover {
+  color: #ED9544;
+}
+
+
+
