--- a/src/public/menu.css
+++ b/src/public/menu.css
@@ -1,68 +1,95 @@
-
-.row{
-    display: flex;
-    justify-content: center;
+.row {
+  display: flex;
+  justify-content: center;
 }
 .menu-header {
-    background-color: #ffe5e5;
-    padding: 10px;
-    text-align: center;
+  background-color: #ffe5e5;
+  padding: 10px;
+  text-align: center;
 }
 .menu-header img {
-    max-width: 100px;
+  max-width: 100px;
 }
 .promociones {
-    background-color: #f8d7da;
-    border-radius: 10px;
-    padding: 15px;
-    text-align: center;
+  background-color: #f8d7da;
+  border-radius: 10px;
+  padding: 15px;
+  text-align: center;
 }
 .promociones img {
-    max-width: 100%;
-    border-radius: 10px;
+  max-width: 100%;
+  border-radius: 10px;
 }
 .categorias img {
-    width: 100%;
-    height: auto;
-    border-radius: 10px;
+  width: 100%;
+  height: auto;
+  border-radius: 10px;
 }
 .card img {
-    max-height: 150px;
-    object-fit: cover;
+  max-height: 200px;
+  object-fit: cover;
 }
 .custom-row {
-    background-color: #ffdd7e;
-    border-radius: 15px;
-    padding: 5px;
-    padding-left: 20px;
-    margin-top: 10px;
-    display: flex;
-    align-items: center;
-    justify-content: start;
+  background-color: #ffdd7e;
+  border-radius: 15px;
+  padding: 5px;
+  padding-left: 20px;
+  margin-top: 10px;
+  display: flex;
+  align-items: center;
+  justify-content: start;
 }
 .custom-row img {
-    max-width: 85px;
-    margin-right: 0px;
-    margin-bottom: -10px;
+  max-width: 85px;
+  margin-right: 0px;
+  margin-bottom: -10px;
 }
 .custom-row h2 {
-    margin-right: 1000px;
+  margin-right: 1000px;
 }
 
 .custom-promociones {
-    background-color: #eb7900;
-    border-radius: 15px;
-    padding: 15px;
-    margin-top: 0px;
-    color: #ffffff;  
+  background-color: #eb7900;
+  border-radius: 15px;
+  padding: 15px;
+  margin-top: 0px;
+  color: #ffffff;
 }
 
 .custom-card {
-    background-color: #eb7900;
-    border-radius: 15px;
-    padding: 15px;
-    margin-top: 10px;
-    display: flex;
-    align-items: center;
-    justify-content: start;
+  background-color: #eb7900;
+  border-radius: 15px;
+  padding: 15px;
+  margin-top: 10px;
+  display: flex;
+  align-items: center;
+  justify-content: start;
+}
+.footer2 {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  background-color: #ffffff;
+  color: white;
+  padding: 15px 0;
+  bottom: 0;
+  width: 100%;
+  box-shadow: 0 -2px 10px rgba(0, 0, 0, 0.1);
+}
+
+.icono2 {
+  color: black;
+  font-size: 24px;
+  text-decoration: none;
+  position: relative;
+}
+
+.icono2:hover {
+  color: #ed9544;
+}
+
+.custom-img-height {
+  height: 500px; /* Ajusta la altura de la imagen */
+  object-fit: cover; /* Asegura que la imagen mantenga su proporción */
+  width: 100%; /* Asegura que ocupe todo el ancho disponible */
 }
