--- a/src/views/bebidas.ejs
+++ b/src/views/bebidas.ejs
@@ -15,7 +15,7 @@
             <img class="arrow" src="/img/arrow2.png" alt="Arrow">
         </div>
 
-        <h1>Nuestras Entradas</h1>
+        <h1>Nuestras Bebidas</h1>
 
         <img class="logo" src="/img/logo.png" alt="">
 
@@ -173,24 +173,24 @@
     </div>
 
 
-    <div class="footer">
+    < <div class="footer2">
 
-        <a href="#" class="icono">
+        <a href="#" class="icono2">
             <i class="fas fa-home"></i>
         </a>
-        <a href="#" class="icono">
+        <a href="#" class="icono2">
             <i class="fas fa-search"></i>
         </a>
-        <a href="#" class="icono">
+        <a href="#" class="icono2">
             <i class="fas fa-shopping-cart"></i>
             <span class="badge">3</span>
         </a>
-        <a href="#" class="icono">
+        <a href="#" class="icono2">
             <i class="fas fa-user"></i>
         </a>
-
+  
     </div>
-
+    <%- include('partials/footer') %>
 </body>
 
 </html>
