--- a/src/views/entradas.ejs
+++ b/src/views/entradas.ejs
@@ -17,14 +17,14 @@
 
         <h1>Nuestras Entradas</h1>
 
-        <img class="logo" src="/img/logo.png" alt="">
+        <img class="logo" src="/img/logopng copy.png" alt="">
 
     </div>
 
     <section>
 
         <div class="search-container">
-            <input type="text" id="search" name="search">
+            <input type="text" id="search" name="search" placeholder="Buscar...">
         </div>
 
         <div class="buttons">
