--- a/src/views/partials/navigation.ejs
+++ b/src/views/partials/navigation.ejs
@@ -62,7 +62,7 @@
             </a>
             <ul class="dropdown-menu">
               <li><a class="dropdown-item" href="/iniciosesion">Iniciar Sesion</a></li>
-              <li><a class="dropdown-item" href="#">Registrarse</a></li>
+              <li><a class="dropdown-item" href="/registro">Registrarse</a></li>
             </ul>
           </li>
         </ul>
